# jsonrpc-gpio

./: .gitignore  BENCHMARKS.md  Cargo.toml  LICENSE  MEMORY_LOG.md  README.md  build.rs  host_client.py  rust-toolchain.toml  s3_fault_tests.py  sdkconfig.defaults  watch_pin_led.py
.cargo/: config.toml
.claude/hooks/: esp32-size-record.sh  esp32-size-update.sh  esp32-size.sh  install.sh
.github/workflows/: host-ci.yml
docs/superpowers/plans/: 2026-06-13-jsonrpc-lite-migration.md
docs/superpowers/specs/: 2026-06-13-jsonrpc-lite-migration-design.md
examples/: host_client.rs  serial_bench.rs  watch_pin_led.rs
src/: dispatch.rs  lib.rs  main.rs  protocol.rs  rgb.rs  server.rs  test_support.rs
src/transport/: host.rs  mod.rs  s3.rs
tests/: cli_ndjson.rs
