[package]
name = "jsonrpc-gpio"
version = "0.1.0"
edition = "2021"
resolver = "2"
rust-version = "1.77"
license = "MIT"
description = "Synchronous JSON-RPC 2.0 GPIO control server in Rust for the ESP32-S3 (ESP-IDF)"
repository = "https://github.com/dukov777/jsonrpc-gpio"

[[bin]]
name = "jsonrpc-gpio"
harness = false # do not use the built-in cargo test harness for the bin -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true       # symbols are nice and they don't increase the size on flash
opt-level = "z"

[dependencies]
log = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# JSON-RPC 2.0 envelope/Id/Error data structures. Pure serde types over
# serde_json (no new transitive deps); builds on std, which esp-idf provides.
jsonrpc-lite = "0.7"
# Bounded line buffer for the NDJSON framer — a fixed-capacity Vec so an
# oversized frame can never grow the heap without limit on-device.
heapless = "0.8"
# Standard byte-stream traits. esp-idf-hal's UsbSerialDriver implements
# embedded_io::{Read,Write}, and so do std `&[u8]` / `Vec<u8>` — so the framer
# is generic over these and the host tests need no mock crate. Must match the
# version esp-idf-hal 0.46 uses (0.7) or the impls won't unify across crates.
embedded-io = { version = "0.7", features = ["std"] }

# ESP-IDF crates only compile when targeting the ESP (not during host unit tests).
[target.'cfg(target_os = "espidf")'.dependencies]
esp-idf-svc = { version = "0.52", default-features = false, features = ["native", "binstart", "std", "alloc"] }
# `rmt-legacy` exposes the TxRmtDriver/FixedLengthSignal API used by the WS2812
# demo driver (src/rgb.rs); the newer channel-based rmt API is more involved
# than this throwaway demo warrants.
esp-idf-hal = { version = "0.46", features = ["rmt-legacy"] }
esp-idf-sys = "0.37"

[dev-dependencies]
rstest = "0.23"

# Host-only: used by examples/serial_bench.rs and examples/host_client.rs to talk
# to a real device over serial. Never pulled into the device build.
[target.'cfg(not(target_os = "espidf"))'.dev-dependencies]
serialport = "4"
# host_client.rs CLI: arg parsing (clap derive) and a Ctrl-C handler so blink/
# rainbow can stop and leave the LED off, matching host_client.py.
clap = { version = "4", features = ["derive"] }
ctrlc = "3"

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
